@@ -1,3 +1,6 @@
+2009-06-13
+- fixed background refresh on systray
+
 2009-06-09
 - fixed issue 98
 
